--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -1,6 +1,5 @@
 \documentclass[12pt,a4paper]{scrartcl}
 \usepackage{polski}
-\usepackage[utf8]{inputenc}
 \usepackage[top=2.5cm, bottom=2.5cm, left=3.5cm, right=1cm]{geometry}
 \usepackage{amsmath}
 \usepackage{amsfonts}
@@ -9,6 +8,9 @@
 \usepackage{titling}
 \usepackage{titlesec}
 \usepackage{fontspec}
+\usepackage{siunitx}
+\sisetup{math-micro=\text{µ},text-micro=µ}
+\newfontfamily{\tytulyrozdzialow}{Arial}
 \setmainfont{Times New Roman}
 \begin{document}
 	\begin{titlepage}
@@ -32,5 +34,15 @@
 	\end{titlepage}
 \tableofcontents
 \newpage
+\begin{section}	{\fontsize{14pt}{16.8pt} \tytulyrozdzialow Wstęp}
+	\hspace{\parindent} Założeniem pracy jest stworzenie stacji meteorologicznej opartej o mikroprocesor ESP8266, złożonej z kilku modułów. Tymi elementami są:
+	\begin{itemize}{}{}
+		\item Płyta główna z mikrokontrolerem ESP8266EX dla przetwarzania informacji z sensorów oraz mikrokontrolerem ATtiny44 dla sterowania zasilaniem całego urządzenia;
+		\item Anemometr ultradźwiękowy do pomiaru kierunku i prędkości wiatru;
+		\item Sensor firmy BOSCH o nazwie BME280, który służy do odczytu temperatury, ciśnienia i wilgotności powietrza;
+		\item Sensor firmy PLANTOWER o nazwie PMS7003, który mierzy ilość pyłu zawieszonego w powietrzu, o wielkości PM1.0, PM2.5 oraz PM10, mierzone w \si\micro g/m$^{3}$.
+	\end{itemize}
+	\par Pierwszą częścią pracy jest opis poszczególnych modułów wykorzystanych do zbudowania tego urządzenia, wliczając w to charakterystyki głównych komponentów dla każdego modułu. Udokumentowane zostanie również skonfigurowanie środowisk, które zostały wykorzystane do stworzenia tego projektu.
+\end{section}
 
 \end{document}
