--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -38,11 +38,15 @@
 	\hspace{\parindent} Założeniem pracy jest stworzenie stacji meteorologicznej opartej o mikroprocesor ESP8266, złożonej z kilku modułów. Tymi elementami są:
 	\begin{itemize}{}{}
 		\item Płyta główna z mikrokontrolerem ESP8266EX dla przetwarzania informacji z sensorów oraz mikrokontrolerem ATtiny44 dla sterowania zasilaniem całego urządzenia;
-		\item Anemometr ultradźwiękowy do pomiaru kierunku i prędkości wiatru;
+		\item Samodzielnie wykonany anemometr ultradźwiękowy do pomiaru kierunku i prędkości wiatru;
 		\item Sensor firmy BOSCH o nazwie BME280, który służy do odczytu temperatury, ciśnienia i wilgotności powietrza;
 		\item Sensor firmy PLANTOWER o nazwie PMS7003, który mierzy ilość pyłu zawieszonego w powietrzu, o wielkości PM1.0, PM2.5 oraz PM10, mierzone w \si\micro g/m$^{3}$.
 	\end{itemize}
-	\par Pierwszą częścią pracy jest opis poszczególnych modułów wykorzystanych do zbudowania tego urządzenia, wliczając w to charakterystyki głównych komponentów dla każdego modułu. Udokumentowane zostanie również skonfigurowanie środowisk, które zostały wykorzystane do stworzenia tego projektu.
+	\par Pierwszą częścią pracy jest schemat blokowy urządzenia oraz ogólny opis poszczególnych modułów wykorzystanych do zbudowania tego urządzenia, wliczając w to charakterystyki głównych komponentów dla każdego modułu. Udokumentowane zostanie również skonfigurowanie środowisk, które zostały wykorzystane do stworzenia tego projektu.
+	\par Następnie przejdę do analizy schematu urządzenia, a konkretnie płyty głównej, bazy z mikroprocesorami i zasilaniem dla wykorzystanych sensorów. Poddana dokładnej analizie będzie każda z części schematu, takie jak sekcja zasilania czy połączeniowa między płytą główną a sensorami.
+	\par W kolejnym etapie pracy przedstawię kody źródłowe do wykorzystanych mikrokontrolerów i dokładnie je omówię, wraz z algorytmami wykorzystanymi do ich napisania.
+	\par Następnie przedstawię w skrócie projekt anemometru ultradźwiękowego, do pomiaru prędkości i kierunku wiatru. Omówiony zostanie schemat elektryczny i blokowy urządzenia.
+	\par Ostatnią częścią projektu będzie ukazanie działania stacji na przykładzie zdjęć urządzenia i zrzutów ekranu z interfejsu do jego obsługi.
 \end{section}
 
 \end{document}
