More work on thesis and code, less on PCB

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -42,11 +42,76 @@
 		\item Sensor firmy BOSCH o nazwie BME280, który służy do odczytu temperatury, ciśnienia i wilgotności powietrza;
 		\item Sensor firmy PLANTOWER o nazwie PMS7003, który mierzy ilość pyłu zawieszonego w powietrzu, o wielkości PM1.0, PM2.5 oraz PM10, mierzone w \si\micro g/m$^{3}$.
 	\end{itemize}
-	\par Pierwszą częścią pracy jest schemat blokowy urządzenia oraz ogólny opis poszczególnych modułów wykorzystanych do zbudowania tego urządzenia, wliczając w to charakterystyki głównych komponentów dla każdego modułu. Udokumentowane zostanie również skonfigurowanie środowisk, które zostały wykorzystane do stworzenia tego projektu.
+	\par Jednym z elementów pracy jest schemat blokowy urządzenia oraz ogólny opis poszczególnych modułów wykorzystanych do zbudowania tego urządzenia, wliczając w to charakterystyki głównych komponentów dla każdego modułu. Udokumentowane zostanie m.in. skonfigurowanie środowiska, które zostały wykorzystane do stworzenia tego projektu.
 	\par Następnie przejdę do analizy schematu urządzenia, a konkretnie płyty głównej, bazy z mikroprocesorami i zasilaniem dla wykorzystanych sensorów. Poddana dokładnej analizie będzie każda z części schematu, takie jak sekcja zasilania czy połączeniowa między płytą główną a sensorami.
-	\par W kolejnym etapie pracy przedstawię kody źródłowe do wykorzystanych mikrokontrolerów i dokładnie je omówię, wraz z algorytmami wykorzystanymi do ich napisania.
-	\par Następnie przedstawię w skrócie projekt anemometru ultradźwiękowego, do pomiaru prędkości i kierunku wiatru. Omówiony zostanie schemat elektryczny i blokowy urządzenia.
-	\par Ostatnią częścią projektu będzie ukazanie działania stacji na przykładzie zdjęć urządzenia i zrzutów ekranu z interfejsu do jego obsługi.
+	\par W kolejnym etapie pracy przedstawię kod źródłowy do wykorzystanego mikroprocesora. Dokładnie go omówię, wraz z algorytmami użytymi do jego napisania. Wykonuje on wiele zadań, m.in. odczytuje dane z sensorów czy kontroluje układy zasilania poszczególnych części.
+	\par W przedostatnim punkcie przedstawię krótko projekt anemometru ultradźwiękowego służącego do pomiaru prędkości i kierunku wiatru. Omówiony zostanie schemat blokowy urządzenia i jego elektryczna reprezentacja.
+	\par Ostatnim elementem projektu będzie ukazanie działania stacji. Pokażę to na przykładzie zdjęć sprzętu oraz zrzutów ekranu z aplikacji Blynk, służącej do interakcji z urządzeniem.
 \end{section}
-
+\newpage
+\begin{section} {\fontsize{14pt}{16.8pt} \tytulyrozdzialow Elementy składowe projektu} 
+	{
+	
+}
+\end{section}
+\newpage
+\begin{section} {\fontsize{14pt}{16.8pt} \tytulyrozdzialow Schemat funkcjonalny} 
+	{
+		
+	}
+\end{section}
+\newpage
+\begin{section} {\fontsize{14pt}{16.8pt} \tytulyrozdzialow Schemat elektryczny} 
+	{
+		
+	}
+\end{section}
+\newpage
+\begin{section} {\fontsize{14pt}{16.8pt} \tytulyrozdzialow Kod źródłowy} 
+	{
+		
+	}
+\end{section}
+\newpage
+\begin{section} {\fontsize{14pt}{16.8pt} \tytulyrozdzialow Opis anemometru} 
+	{
+		
+	}
+\end{section}
+\newpage
+\begin{section} {\fontsize{14pt}{16.8pt} \tytulyrozdzialow Infografika} 
+	{
+		
+	}
+\end{section}
+\newpage
+\begin{section} {\fontsize{14pt}{16.8pt} \tytulyrozdzialow Spis rysunków} 
+	{
+		
+	}
+\end{section}
+\newpage
+\begin{section} {\fontsize{14pt}{16.8pt} \tytulyrozdzialow Spis tabel} 
+	{
+		
+	}
+\end{section}
+\newpage
+\begin{section} {\fontsize{14pt}{16.8pt} \tytulyrozdzialow Spis załączników} 
+	{
+		
+	}
+\end{section}
+\newpage
+\begin{section} {\fontsize{14pt}{16.8pt} \tytulyrozdzialow Bibliografia} 
+	{
+		
+	}
+\end{section}
+\newpage
+\begin{section} {\fontsize{14pt}{16.8pt} \tytulyrozdzialow Streszczenie} 
+	{
+		
+	}
+\end{section}
 \end{document}
