Little more PCB routing + minor fixes to the thesis

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -37,8 +37,8 @@
 \begin{section}	{\fontsize{14pt}{16.8pt} \tytulyrozdzialow Wstęp}
 	\hspace{\parindent} Założeniem pracy jest stworzenie stacji meteorologicznej opartej o mikroprocesor ESP8266, złożonej z kilku modułów. Tymi elementami są:
 	\begin{itemize}{}{}
-		\item Płyta główna z mikrokontrolerem ESP8266EX dla przetwarzania informacji z sensorów oraz mikrokontrolerem ATtiny44 dla sterowania zasilaniem całego urządzenia;
-		\item Samodzielnie wykonany anemometr ultradźwiękowy do pomiaru kierunku i prędkości wiatru;
+		\item Płyta główna z mikrokontrolerem ESP8266EX dla przetwarzania informacji z sensorów oraz sterowania zasilaniem całego urządzenia;
+		\item Samodzielnie wykonany anemometr ultradźwiękowy do pomiaru kierunku i prędkości wiatru ze względów na koszty, ponieważ gotowe są zbyt drogie w stosunku do reszty;
 		\item Sensor firmy BOSCH o nazwie BME280, który służy do odczytu temperatury, ciśnienia i wilgotności powietrza;
 		\item Sensor firmy PLANTOWER o nazwie PMS7003, który mierzy ilość pyłu zawieszonego w powietrzu, o wielkości PM1.0, PM2.5 oraz PM10, mierzone w \si\micro g/m$^{3}$.
 	\end{itemize}
